import pygame as pg
from pygame.math import Vector2
import math
from enemy_data import Enemy_Data
import constants as c

class Enemy(pg.sprite.Sprite):
    def __init__(self, enemy_type, waypoints, images):
        self.waypoints = waypoints
        self.pos = Vector2(self.waypoints[0])
        self.target_waypoint = 1

        enemy_data = Enemy_Data.get(enemy_type)
        self.health = enemy_data.get("health")
        self.speed = enemy_data.get("speed")
        self.angle = 0
        pg.sprite.Sprite.__init__(self)
        self.original_image = images.get(enemy_type)
        self.image = images
        self.image = pg.transform.rotate(self.original_image,self.angle)
        self.rect = self.image.get_rect()
        self.rect.center = self.pos


    def update(self, world):
        self.move(world)
        self.rotate()
        self.check_alive(world)

    def move(self,world):
        #define a target waypoint
        if self.target_waypoint < len(self.waypoints):
            self.target = Vector2(self.waypoints[self.target_waypoint])
            self.movement  = self.target - self.pos
        else:
            #enemy reach the end
            self.kill()
            world.health -= 1
            world.missed_enemies += 1

        #calculate distance to target
        dist = self.movement.length()
        #check if remainign distancec is greater than the enemy speed
        if dist >= (self.speed * world.game_speed):
            self.pos += self.movement.normalize() * (self.speed * world.game_speed)
        else:
            if dist != 0:
                self.pos += self.movement.normalize() * dist
            self.target_waypoint +=1
       


    def rotate(self):
        #calcuta distance to next waypoint
        dist= self.target - self.pos
        #use distance to calcute angle
        self.angle = math.degrees(math.atan2(-dist[1],dist[0]))
        #rotate imgae and update rectangle
        self.image = pg.transform.rotate(self.original_image,self.angle)
        self.rect = self.image.get_rect()
        self.rect.center = self.pos

    def check_alive(self,world):
        if self.health <= 0:
            world.money +=c.Kill_reward
            world.killed_enemies += 1
            self.kill()